Coverage section alignment solved

--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,7 @@ body {
   background: var(--color-primary);
   color: var(--color-bg);
 }
+.active{
+  background-color: var(--color-secondary);
+  color: white;
+}
